--- a/exo-2/index.html
+++ b/exo-2/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <!-- <script src="ex2.1.js"></script>
+    <script src="ex2.1.js"></script>
     <script src="ex2.2.js"></script>
     <script src="ex2.3.js"></script>
-    <script src="ex2.4.js"></script> -->
+    <script src="ex2.4.js"></script>
     <script src="ex2.5.js"></script>
     <script src="ex2.6.js"></script>
     <script src="ex2.7.js"></script>
