--- a/exo-3/index.html
+++ b/exo-3/index.html
@@ -8,8 +8,8 @@
 <body>
     <!-- <script src="ex3.0.js"  ></script> -->
     <!-- <script src="ex3.1.js"  ></script> -->
-    <script src="ex3.2.js"  ></script>
+    <!-- <script src="ex3.2.js"  ></script> -->
     <script src="ex3.3.js"  ></script>
-    <script src="ex3.4.js"  ></script>
+    <!-- <script src="ex3.4.js"  ></script> -->
 </body>
 </html>
